src/modules/coin/data_provider/snapshots/near_enhanced_api__modules__coin__data_provider__metadata__tests__ft_contract_metadata.snap
---
source: src/modules/coin/data_provider/metadata.rs
expression: metadata
---
Ok(
    FtContractMetadata {
        spec: "ft-1.0.0",
        name: "USN",
        symbol: "USN",
        icon: Some(
            "data:image/svg+xml;charset=UTF-8,%3Csvg width='38' height='38' viewBox='0 0 38 38' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='38' height='38' rx='19' fill='black'/%3E%3Cpath d='M14.8388 10.6601C14.4203 10.1008 13.6748 9.86519 12.9933 10.0768C12.3119 10.2885 11.85 10.8991 11.85 11.5883V14.7648H8V17.9412H11.85V20.0589H8V23.2353H11.85V28H15.15V16.5108L23.1612 27.2165C23.5797 27.7758 24.3252 28.0114 25.0067 27.7997C25.6881 27.5881 26.15 26.9775 26.15 26.2882V23.2353H30V20.0589H26.15V17.9412H30V14.7648H26.15V10.0001H22.85V21.3658L14.8388 10.6601Z' fill='white'/%3E%3C/svg%3E",
        ),
        reference: None,
        reference_hash: None,
        decimals: 18,
    },
)
