src/modules/coin/data_provider/snapshots/near_enhanced_api__modules__coin__data_provider__metadata__tests__ft_contract_metadata_no_contract_deployed.snap
---
source: src/modules/coin/data_provider/metadata.rs
expression: metadata
---
Err(
    Error {
        code: 400,
        message: "Invalid Input: The account `olga.near` does not implement any suitable contract at block 68000000",
        retriable: false,
    },
)
